--- a/index.html
+++ b/index.html
@@ -3,13 +3,13 @@
 <head>
 	<meta charset="UTF-8">
 	<title></title>
-	<link rel="stylesheet" href="css/style.css">
+	<link rel="stylesheet" href="css/main.css">
 	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
 	</head>
 <body>
 	<head>
-		<div>
-			<p>Adilii</p>
+		<div class="top-bar">
+			<p class="logo">Adilii</p>
 			<input type="text" size="40">
 			<a href="#"><i class="fas fa-cart-arrow-down"></i>300&#36;</a>
 		</div>
